Fixed table overflow on mobile screens

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -958,4 +958,7 @@ Responsive Structure
     .shProductTotal > span{
         color: green;
     }
+    .invTable{
+        font-size: 14px;
+    }
 }
